# llm-waste-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
analyzers/: cacheability.py  context_bloat.py  models.py
cli/: main.py
docs/: methodology.md  taxonomy.md
examples/langfuse/: sample_trace.json
patterns/W2-cache-breaker/: README.md
